--- a/assets/template.html
+++ b/assets/template.html
@@ -5,17 +5,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Team Roster</title>
+    <title>Team</title>
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="stylesheet" href="../assets/css/mystyles.css">
     <script src="https://kit.fontawesome.com/ceb7ababc1.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="has-text-info">
-    <nav class="level has-background-grey">
+    <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
-                <p class="heading">Roster</p>
+                <p class="title is-4">Breakdown!</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
