--- a/output/index.html
+++ b/output/index.html
@@ -12,7 +12,7 @@
     <nav class="level has-background-grey">
         <div class="level-item has-text-centered">
             <div>
-                <p class="heading">Roster</p>
+                <p class="title is-4">Roster</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
@@ -25,9 +25,7 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
+                                    <figure class="icon is-large"><i class="fab fa-galactic-senate fa-3x has-text-primary"></i></figure>
                                 </div>
                                 <div class="media-content">
                                     <p class="id-slot">ID#:12345</p>
@@ -47,19 +45,17 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
                                 </div>
                                 <div class="media-content">
                                     <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Manager</p>
+                                    <p class="role-slot title is-5">Intern</p>
                                 </div>
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
                                 <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
+                                <a class="other-slot" href="#">School: UCONN</a>
                             </div>
                         </div>
                     </div>
@@ -68,92 +64,24 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
+                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
                                 </div>
                                 <div class="media-content">
                                     <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Manager</p>
+                                    <p class="role-slot title is-5">Engineer</p>
                                 </div>
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
                                 <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
+                                <a class="other-slot" href="#">Github Profile: firefreet</a>
                             </div>
                         </div>
                     </div>
                 </div></div>
 
         </div>
-    <div class="container-slot container">
-            <div class="columns"><div class="column-slot column">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Manager</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Manager</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large">
-                                        <i class="far fa-angry fa-3x"></i>
-                                    </figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Manager</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
-                            </div>
-                        </div>
-                    </div>
-                </div></div>
-
-        </div></section>
+    </section>
 
 
 </body></html>
