no idea.... really...p

--- a/assets/template.html
+++ b/assets/template.html
@@ -15,7 +15,7 @@
     <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
-                <p class="title is-4">Breakdown!</p>
+                <p class="title is-4">Breakdown it down!</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
@@ -39,8 +39,8 @@
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">John Smith</p>
-                                <p class="email-slot subtitle is-6">johnsmith@travelers.com</p>
-                                <a class="other-slot" href="#">GitHub Profile: firefreet</a>
+                                <p class="email-slot subtitle is-6 is-size-8-touch">johnsmith@travelers.com</p>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">GitHub Profile: firefreet</a>
                             </div>
                         </div>
                     </div>
