--- a/output/index.html
+++ b/output/index.html
@@ -2,17 +2,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Team Roster</title>
+    <title>Team</title>
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="stylesheet" href="../assets/css/mystyles.css">
     <script src="https://kit.fontawesome.com/ceb7ababc1.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="has-text-info">
-    <nav class="level has-background-grey">
+    <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
-                <p class="title is-4">Roster</p>
+                <p class="title is-4">Breakdown!</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
@@ -28,14 +28,14 @@
                                     <figure class="icon is-large"><i class="fab fa-galactic-senate fa-3x has-text-primary"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="id-slot">ID#:34543</p>
                                     <p class="role-slot title is-5">Manager</p>
                                 </div>
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Office#: 123</a>
+                                <p class="is-size-9-touch email-slot subtitle is-6">firefreet@gmail.com</p>
+                                <a class="other-slot is-size-9-touch" href="#">Office#: 812</a>
                             </div>
                         </div>
                     </div>
@@ -45,17 +45,17 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Intern</p>
+                                    <p class="id-slot">ID#:33423</p>
+                                    <p class="role-slot title is-5">Engineer</p>
                                 </div>
                             </div>
                             <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">School: UCONN</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Therese Gray</p>
+                                <p class="is-size-9-touch email-slot subtitle is-6">tgray1@yahoo.com</p>
+                                <a class="other-slot is-size-9-touch" href="#">Github Profile: trgray2</a>
                             </div>
                         </div>
                     </div>
@@ -67,21 +67,62 @@
                                     <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="id-slot">ID#:334223</p>
                                     <p class="role-slot title is-5">Engineer</p>
                                 </div>
                             </div>
                             <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6">user@domain.com</p>
-                                <a class="other-slot" href="#">Github Profile: firefreet</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Jeff Scott</p>
+                                <p class="is-size-9-touch email-slot subtitle is-6">silentshadow@gmail.com</p>
+                                <a class="other-slot is-size-9-touch" href="#">Github Profile: shadowfox</a>
                             </div>
                         </div>
                     </div>
                 </div></div>
 
         </div>
-    </section>
+    <div class="container-slot container">
+            <div class="columns"><div class="column-slot column">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:444323</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <p class="name-slot title is-5 is-size-6-touch">Blue Chocobo</p>
+                                <p class="is-size-9-touch email-slot subtitle is-6">bchoco@moogle.net</p>
+                                <a class="other-slot is-size-9-touch" href="#">School: UCLA</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><div class="column-slot column">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:33243</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <p class="name-slot title is-5 is-size-6-touch">George of the Jungle</p>
+                                <p class="is-size-9-touch email-slot subtitle is-6">strong@as.he.can.be</p>
+                                <a class="other-slot is-size-9-touch" href="#">School: UCONN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div></div>
+
+        </div></section>
 
 
 </body></html>
