--- a/output/index.html
+++ b/output/index.html
@@ -12,7 +12,7 @@
     <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
-                <p class="title is-4">Breakdown!</p>
+                <p class="title is-4">Breakdown it down!</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
@@ -28,14 +28,14 @@
                                     <figure class="icon is-large"><i class="fab fa-galactic-senate fa-3x has-text-primary"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:34543</p>
+                                    <p class="id-slot">ID#:12345</p>
                                     <p class="role-slot title is-5">Manager</p>
                                 </div>
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="is-size-9-touch email-slot subtitle is-6">firefreet@gmail.com</p>
-                                <a class="other-slot is-size-9-touch" href="#">Office#: 812</a>
+                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Office#: 123</a>
                             </div>
                         </div>
                     </div>
@@ -45,17 +45,17 @@
                         <div class="card-content">
                             <div class="media">
                                 <div class="media-left">
-                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:33423</p>
-                                    <p class="role-slot title is-5">Engineer</p>
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Intern</p>
                                 </div>
                             </div>
                             <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Therese Gray</p>
-                                <p class="is-size-9-touch email-slot subtitle is-6">tgray1@yahoo.com</p>
-                                <a class="other-slot is-size-9-touch" href="#">Github Profile: trgray2</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
                             </div>
                         </div>
                     </div>
@@ -67,62 +67,21 @@
                                     <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
                                 </div>
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:334223</p>
+                                    <p class="id-slot">ID#:12345</p>
                                     <p class="role-slot title is-5">Engineer</p>
                                 </div>
                             </div>
                             <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeff Scott</p>
-                                <p class="is-size-9-touch email-slot subtitle is-6">silentshadow@gmail.com</p>
-                                <a class="other-slot is-size-9-touch" href="#">Github Profile: shadowfox</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Github Profile: firefreet</a>
                             </div>
                         </div>
                     </div>
                 </div></div>
 
         </div>
-    <div class="container-slot container">
-            <div class="columns"><div class="column-slot column">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:444323</p>
-                                    <p class="role-slot title is-5">Intern</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Blue Chocobo</p>
-                                <p class="is-size-9-touch email-slot subtitle is-6">bchoco@moogle.net</p>
-                                <a class="other-slot is-size-9-touch" href="#">School: UCLA</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:33243</p>
-                                    <p class="role-slot title is-5">Intern</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">George of the Jungle</p>
-                                <p class="is-size-9-touch email-slot subtitle is-6">strong@as.he.can.be</p>
-                                <a class="other-slot is-size-9-touch" href="#">School: UCONN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div></div>
-
-        </div></section>
+    </section>
 
 
 </body></html>
