force cards to 1/3 width, refactor questions file dry-ness, add option to open webpage on completion

--- a/output/index.html
+++ b/output/index.html
@@ -20,7 +20,7 @@
     <section class="section-slot section">
         <div class="container-slot container">
             <div class="columns">
-                <div class="column-slot column">
+                <div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
@@ -40,7 +40,7 @@
                         </div>
                     </div>
                 </div>
-            <div class="column-slot column">
+            <div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                     </div>
-                </div><div class="column-slot column">
+                </div><div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
@@ -81,7 +81,29 @@
                 </div></div>
 
         </div>
-    </section>
+    <div class="container-slot container">
+            <div class="columns"><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <div class="content">
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div></div>
+
+        </div></section>
 
 
 </body></html>
