--- a/assets/template.html
+++ b/assets/template.html
@@ -15,7 +15,7 @@
     <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
-                <p class="title is-4">Breakdown it down!</p>
+                <p class="title is-4">Break it down!</p>
                 <p class="title">Team Information</p>
             </div>
         </div>
@@ -23,7 +23,7 @@
     <section class="section-slot section">
         <div class="container-slot container">
             <div class="columns">
-                <div class="column-slot column">
+                <div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
                             <div class="media">
