template and script now create email addresses as mailto links

--- a/assets/template.html
+++ b/assets/template.html
@@ -39,7 +39,7 @@
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">John Smith</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">johnsmith@travelers.com</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:johnsmith@travelers.com">johnsmith@travelers.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">GitHub Profile: firefreet</a>
                             </div>
                         </div>
