--- a/output/index.html
+++ b/output/index.html
@@ -34,95 +34,16 @@
                             </div>
                             <div class="content">
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Office#: 123</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            <div class="column-slot column is-one-third">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Intern</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column is-one-third">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Intern</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div></div>
+            </div>
 
         </div>
-    <div class="container-slot container">
-            <div class="columns"><div class="column-slot column is-one-third">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Engineer</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Github Profile: firefreet</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column is-one-third">
-                    <div class="card">
-                        <div class="card-content">
-                            <div class="media">
-                                <div class="media-left">
-                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
-                                </div>
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Intern</p>
-                                </div>
-                            </div>
-                            <div class="content">
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <p class="email-slot subtitle is-6 is-size-8-touch">user@domain.com</p>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div></div>
-
-        </div></section>
+    </section>
 
 
 </body></html>
