comment out html

--- a/output/index.html
+++ b/output/index.html
@@ -3,12 +3,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Team</title>
+    <!-- two style sheets. first works for the template location, second for output file location -->
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="stylesheet" href="../assets/css/mystyles.css">
+    <!-- fontawesome link -->
     <script src="https://kit.fontawesome.com/ceb7ababc1.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="has-text-info">
+    <!-- header section -->
     <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
@@ -17,6 +20,7 @@
             </div>
         </div>
     </nav>
+    <!-- section to contain dynamic cards -->
     <section class="section-slot section">
         <div class="container-slot container">
             <div class="columns">
