--- a/assets/template.html
+++ b/assets/template.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Team</title>
+    <!-- two style sheets. first works for the template location, second for output file location -->
     <link rel="stylesheet" href="css/mystyles.css">
     <link rel="stylesheet" href="../assets/css/mystyles.css">
+    <!-- fontawesome link -->
     <script src="https://kit.fontawesome.com/ceb7ababc1.js" crossorigin="anonymous"></script>
 </head>
 
 <body class="has-text-info">
+    <!-- header section -->
     <nav class="level has-background-info">
         <div class="level-item has-text-centered">
             <div>
@@ -20,24 +23,34 @@
             </div>
         </div>
     </nav>
+    <!-- section to contain dynamic cards -->
     <section class="section-slot section">
+        <!-- this section holds 3 cards at a time and gets repeated @ 4,7,10 etc.-->
         <div class="container-slot container">
+            <!-- defines a group of columns -->
             <div class="columns">
+                <!-- section of an actual card, which gets cloned for each person input -->
                 <div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
                             <div class="media">
                                 <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
                                     <figure class="icon is-large">
+                                        <!-- placeholder icon -->
                                         <i class="far fa-angry fa-3x"></i>
                                     </figure>
                                 </div>
+                                <!-- text to go with icon: employee ID and title -->
                                 <div class="media-content">
                                     <p class="id-slot">ID#: 65743</p>
                                     <p class="role-slot title is-5">Manager</p>
                                 </div>
                             </div>
+                            <!-- defines text at bottom of card -->
                             <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
                                 <p class="name-slot title is-5 is-size-6-touch">John Smith</p>
                                 <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:johnsmith@travelers.com">johnsmith@travelers.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">GitHub Profile: firefreet</a>
