--- a/output/index.html
+++ b/output/index.html
@@ -22,21 +22,29 @@
     </nav>
     <!-- section to contain dynamic cards -->
     <section class="section-slot section">
+        <!-- this section holds 3 cards at a time and gets repeated @ 4,7,10 etc.-->
         <div class="container-slot container">
+            <!-- defines a group of columns -->
             <div class="columns">
+                <!-- section of an actual card, which gets cloned for each person input -->
                 <div class="column-slot column is-one-third">
                     <div class="card">
                         <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
                             <div class="media">
                                 <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
                                     <figure class="icon is-large"><i class="fab fa-galactic-senate fa-3x has-text-primary"></i></figure>
                                 </div>
+                                <!-- text to go with icon: employee ID and title -->
                                 <div class="media-content">
                                     <p class="id-slot">ID#:12345</p>
                                     <p class="role-slot title is-5">Manager</p>
                                 </div>
                             </div>
+                            <!-- defines text at bottom of card -->
                             <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
                                 <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Office#: 123</a>
@@ -44,10 +52,110 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            <div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Engineer</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="https://github.com/firefreet">Github Profile: firefreet</a>
+                            </div>
+                        </div>
+                    </div>
+                </div></div>
 
         </div>
-    </section>
+    <div class="container-slot container">
+            <!-- defines a group of columns -->
+            <div class="columns"><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="role-slot title is-5">Engineer</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="https://github.com/firefreet">Github Profile: firefreet</a>
+                            </div>
+                        </div>
+                    </div>
+                </div></div>
+
+        </div></section>
 
 
 </body></html>
