add text color class for github links

--- a/output/index.html
+++ b/output/index.html
@@ -96,7 +96,7 @@
                                 <!-- Name, email, and title specific information (github, school, or office #) -->
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
                                 <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="https://github.com/firefreet">Github Profile: firefreet</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch has-text-link" href="https://github.com/firefreet">Github Profile: firefreet</a>
                             </div>
                         </div>
                     </div>
@@ -126,30 +126,6 @@
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
                                 <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
-                            </div>
-                        </div>
-                    </div>
-                </div><div class="column-slot column is-one-third">
-                    <div class="card">
-                        <div class="card-content">
-                            <!-- defines top of card with icon on left, text on right -->
-                            <div class="media">
-                                <div class="media-left">
-                                    <!-- icon from font awesome, depends on the employee type -->
-                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
-                                </div>
-                                <!-- text to go with icon: employee ID and title -->
-                                <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
-                                    <p class="role-slot title is-5">Engineer</p>
-                                </div>
-                            </div>
-                            <!-- defines text at bottom of card -->
-                            <div class="content">
-                                <!-- Name, email, and title specific information (github, school, or office #) -->
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="https://github.com/firefreet">Github Profile: firefreet</a>
                             </div>
                         </div>
                     </div>
