--- a/output/index.html
+++ b/output/index.html
@@ -46,7 +46,7 @@
                             <div class="content">
                                 <!-- Name, email, and title specific information (github, school, or office #) -->
                                 <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:frtteer@yahoo.com">frtteer@yahoo.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">Office#: 123</a>
                             </div>
                         </div>
@@ -63,15 +63,15 @@
                                 </div>
                                 <!-- text to go with icon: employee ID and title -->
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="id-slot">ID#:2468</p>
                                     <p class="role-slot title is-5">Intern</p>
                                 </div>
                             </div>
                             <!-- defines text at bottom of card -->
                             <div class="content">
                                 <!-- Name, email, and title specific information (github, school, or office #) -->
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Jolly G. Giant</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:jgreengiant@aol.com">jgreengiant@aol.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
                             </div>
                         </div>
@@ -87,15 +87,15 @@
                                 </div>
                                 <!-- text to go with icon: employee ID and title -->
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="id-slot">ID#:7777</p>
                                     <p class="role-slot title is-5">Engineer</p>
                                 </div>
                             </div>
                             <!-- defines text at bottom of card -->
                             <div class="content">
                                 <!-- Name, email, and title specific information (github, school, or office #) -->
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Blue Chocobo</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:bluecoco@gmail.com">bluecoco@gmail.com</a>
                                 <a class="other-slot subtitle is-6 is-size-8-touch has-text-link" href="https://github.com/firefreet">Github Profile: firefreet</a>
                             </div>
                         </div>
@@ -116,16 +116,92 @@
                                 </div>
                                 <!-- text to go with icon: employee ID and title -->
                                 <div class="media-content">
-                                    <p class="id-slot">ID#:12345</p>
+                                    <p class="id-slot">ID#:666</p>
                                     <p class="role-slot title is-5">Intern</p>
                                 </div>
                             </div>
                             <!-- defines text at bottom of card -->
                             <div class="content">
                                 <!-- Name, email, and title specific information (github, school, or office #) -->
-                                <p class="name-slot title is-5 is-size-6-touch">Jeremy Marotta</p>
-                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:user@domain.com">user@domain.com</a>
-                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: UCONN</a>
+                                <p class="name-slot title is-5 is-size-6-touch">Timmie Too</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:ttoo@sbcglobal.net">ttoo@sbcglobal.net</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: Yale</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fas fa-jedi fa-3x has-text-success"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:3425</p>
+                                    <p class="role-slot title is-5">Engineer</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Sam Gamgee</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:companion@frodo.com">companion@frodo.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch has-text-link" href="https://github.com/chan">Github Profile: chan</a>
+                            </div>
+                        </div>
+                    </div>
+                </div><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:5342</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">John Oliver</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:joliver@last.night">joliver@last.night</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: Nevermore</a>
+                            </div>
+                        </div>
+                    </div>
+                </div></div>
+
+        </div><div class="container-slot container">
+            <!-- defines a group of columns -->
+            <div class="columns"><div class="column-slot column is-one-third">
+                    <div class="card">
+                        <div class="card-content">
+                            <!-- defines top of card with icon on left, text on right -->
+                            <div class="media">
+                                <div class="media-left">
+                                    <!-- icon from font awesome, depends on the employee type -->
+                                    <figure class="icon is-large"><i class="fab fa-galactic-republic fa-3x has-text-info"></i></figure>
+                                </div>
+                                <!-- text to go with icon: employee ID and title -->
+                                <div class="media-content">
+                                    <p class="id-slot">ID#:99999</p>
+                                    <p class="role-slot title is-5">Intern</p>
+                                </div>
+                            </div>
+                            <!-- defines text at bottom of card -->
+                            <div class="content">
+                                <!-- Name, email, and title specific information (github, school, or office #) -->
+                                <p class="name-slot title is-5 is-size-6-touch">Justin Timberlake</p>
+                                <a class="email-slot subtitle is-6 is-size-8-touch is-block is-marginless has-text-info" href="mailto:jt@awesome.com">jt@awesome.com</a>
+                                <a class="other-slot subtitle is-6 is-size-8-touch" href="#">School: Just for Trick</a>
                             </div>
                         </div>
                     </div>
